[project]
name = "py-uds"
description = "UDS (Unified Diagnostic Services) protocol handler."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
]
keywords = [
    "uds",
    "unified-diagnostic-services",
    "iso14229",
    "iso-14229",
    "obd",
    "on-board-diagnostic",
    "vehicle-diagnostic",
    "automotive",
]
authors = [
    {name="Maciej Dąbrowski", email="maciej.dabrowski@software-quality.pl"},
    {name="UDS Package Development", email="uds-package-development@googlegroups.com"},
]
maintainers = [
    {name="Maciej Dąbrowski", email="maciej.dabrowski@software-quality.pl"},
    {name="UDS Package Development", email="uds-package-development@googlegroups.com"},
]
dependencies = [
    "aenum >=3.0.0, <3.1.16",  # version 3.1.13 contains a breaking change (potentially a defect)
    "python-can == 4.*"
]
dynamic = ["version"]


[project.urls]
"Homepage" = "https://github.com/mdabrowski1990/uds"
"User Documentation" = "https://uds.readthedocs.io"
"Repository" = "https://github.com/mdabrowski1990/uds"
"Issues Tracking System" = "https://github.com/mdabrowski1990/uds/issues"
"Releases and Changelogs" = "https://github.com/mdabrowski1990/uds/releases"
"Security Policy" = "https://github.com/mdabrowski1990/uds/security/policy"
"PyPI" = "https://pypi.org/project/py-uds/"
"Wiki" = "https://github.com/mdabrowski1990/uds/wiki"
"Code Download" = "https://github.com/mdabrowski1990/uds/archive/refs/heads/main.zip"


[project.optional-dependencies]
test = [
    "mock == 5.*",
    "pytest == 8.*",
    "pytest-cov",
    "pytest-asyncio",
]
static-code-analysis = [
    "prospector == 1.10.3",
    "mypy == 1.9.0",
    "vulture == 2.11",
    "bandit == 1.7.8",
    "pyroma == 4.2",
]
dependency-scan = [
    "safety == 3.1.0",
    "pip-audit == 2.7.3",
]
sorting-imports = [
    "isort == 5.13.2"
]
docs = [
    "sphinx",
    "sphinx-autoapi",
    "sphinx-rtd-theme",
    "tomli",
]
docs-checks = [
    "doc8 == 1.1.1",
]


[build-system]
requires = [
    "setuptools >= 42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {attr = "uds.__version__"}


[tool.setuptools.package-data]
"*" = [
    "*.md",
    "*.rst",
    "*.txt",
    "*.toml"
]
docs = [
    "source/*.rst",
    "source/pages/*.rst",
    "source/*.png",
    "source/*.drawio",
    "source/*.tgn",
    "source/*.md",
]


[tool.setuptools.packages.find]
include = [
    "uds.*"
]


[tool.pytest.ini_options]
minversion = "7.0"
markers = [
    "integration: Software integration tests.",
    "performance: Performance (non-functional) tests."
]
testpaths = [
    "tests/software_tests",
    "tests/system_tests",
]
filterwarnings = "ignore:::.*uds*"
asyncio_mode = "strict"


[tool.isort]
src_paths = ["uds"]
line_length = 120
use_parentheses = true
include_trailing_comma = true
force_grid_wrap = 0
multi_line_output = 3


[tool.doc8]
max-line-length = 120
ignore = ["D004"]
ignore-path-errors = [
    "docs\\source\\pages\\knowledge_base\\diagnostic_message.rst;D001",  # tables
]
