[metadata]
name = py-uds
url = https://github.com/mdabrowski1990/uds
download_url = https://github.com/mdabrowski1990/uds/archive/refs/heads/main.zip
project_urls =
    Wiki = https://github.com/mdabrowski1990/uds/wiki
    Security policy = https://github.com/mdabrowski1990/uds/security/policy
    Issues Tracking System = https://github.com/mdabrowski1990/uds/issues
    User Documentation = https://uds.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Embedded Systems
    Topic :: System :: Monitoring
    Topic :: System :: Networking
license_file = LICENSE
description = UDS (Unified Diagnostic Services) protocol handler. It supports CAN, Ethernet, LIN, FlexRay, K-Line with possible extension for any other bus.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    automotive
    vehicle-diagnostic
    uds
    unified-diagnostic-services
    iso14229
    iso-14229,
    obd
    on-board-diagnostic


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8


[options.package_data]
* = *.md, *.rst, *.txt
docs = source/*.rst, source/pages/*.rst, source/*.png, source/*.drawio
