[metadata]
name = py-uds
version = attr: uds.__version__
url = https://github.com/mdabrowski1990/uds
description = "UDS (Unified Diagnostic Services) protocol handler."
download_url = https://github.com/mdabrowski1990/uds/archive/refs/heads/main.zip
project_urls =
    User Documentation = "https://uds.readthedocs.io/en/latest/"
    Repository = "https://github.com/mdabrowski1990/uds"
    Issues Tracking System = "https://github.com/mdabrowski1990/uds/issues"
    Releases and Changelogs = "https://github.com/mdabrowski1990/uds/releases"
    Security Policy = "https://github.com/mdabrowski1990/uds/security/policy"
    Wiki = "https://github.com/mdabrowski1990/uds/wiki"
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Embedded Systems
    Topic :: System :: Monitoring
    Topic :: System :: Networking
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    uds
    unified-diagnostic-services
    iso14229
    iso-14229
    obd
    on-board-diagnostic
    vehicle-diagnostic
    automotive


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    aenum
    python-can
dependency_links =
    https://github.com/ethanfurman/aenum
    https://github.com/hardbyte/python-can


[options.package_data]
* = *.md, *.rst, *.txt, *.toml
docs = source/*.rst, source/pages/*.rst, source/*.png, source/*.drawio
