[metadata]
version = attr: uds.__version__
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst


[options]
zip_safe = False
include_package_data = True
install_requires =
    aenum
    python-can
dependency_links =
    https://github.com/ethanfurman/aenum
    https://github.com/hardbyte/python-can


[options.package_data]
* = *.md, *.rst, *.txt, *.toml
docs = source/*.rst, source/pages/*.rst, source/*.png, source/*.drawio
